apps/uptime-kuma/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
  namespace: halo # Change the namespace if needed
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      containers:
        - name: uptime-kuma
          image: louislam/uptime-kuma:2.5.6
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "450m"
          volumeMounts:
            - name: data-volume
              mountPath: /app/data/
              readOnly: false
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: uptime-kuma-data # Links to the ConfigMap defined below
