apps/uptime-kuma/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: halo
spec:
  selector:
    app: uptime-kuma
  ports:
  - name: web     
    port: 3001      
    protocol: TCP 
    targetPort: 3001
