apps/uptime-kuma/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma
  namespace: halo
spec:
  ingressClassName: nginx # Specify the Traefik ingress class explicitly
  rules:
    - host: uptime.halo.fabseit.net # Match the host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uptime-kuma # Backend service name
                port:
                  number: 3001 # Backend service port
  tls:
    - hosts:
        - uptime.halo.fabseit.net # TLS will apply to this host
      secretName: local-fabseit-net-prod-tls # Reference to the TLS secret
